# computer-experiments

./: .gitignore  README.md  font-embedding.txt
eigenvalue_problem/: Makefile  double_well.c  power.c
exercise/: CMakeLists.txt  Makefile  exercise-0.tex  exercise-1-0.tex  exercise-1-1.tex  exercise-1-2.tex  exercise-1-3.tex  exercise-1-4.tex  exercise-1.tex  exercise-2-1.tex  exercise-2-2.tex  exercise-2-3.tex  exercise-2-4.tex  exercise-2.tex  exercise-3.tex  exercise-4.tex  exercise-5.tex  exercise-6.tex  histogram.eps  make.sh  make_bundle.sh  report-1.txt  report-2.txt  report-3.txt
exercise/basics/: .gitignore  CMakeLists.txt  Makefile  array.c  array2func.c  bisection.c  complex.c  differential.c  differential_cxx.C  differential_cxx.cpp  differential_f.f90  differential_py.py  fibonacci.c  fibonacci_cxx.C  fibonacci_cxx.cpp  fibonacci_f.f90  fibonacci_py.py  hello_cxx.cpp  hello_f.f90  hello_py.py
exercise/eigenvalue_problem/: .gitignore  CMakeLists.txt  Makefile  README.md  diag.c  double_well.c  dsyev.h  matfree.c  sparse.c  tridiagonal.c
exercise/ex4/: full_svd.c  svd.c
exercise/hello/: hello.c  hello.tex
exercise/hpc/: CMakeLists.txt  Makefile  pi_mpi.c
exercise/include/: bond_table.h  clange.h  dgesv.h  dlange.h  dstev.h  slange.h  zlange.h
exercise/linear_regression/: Makefile  README.md  regression.c
exercise/linear_system/: .gitignore  Makefile  README.md  determinant.c  dgesv.c  dgesv.h  dgetrf.h  dgetrs.h  gauss.c  lu_decomp.c  matrix_example.c  matrix_util.h  multiply.c  multiply_dgemm.c  poisson.h  poisson_dense.c  poisson_lu.c  poisson_sparse.c  steepest_descent.c
exercise/markov_chain/: harmonic.c
exercise/matrix/: .gitignore  Makefile  README.md  clange.h  cmatrix.h  dgemm.h  dlange.c  dlange.h  matrix_example.c  multiply.c  multiply_dgemm.c  pointer-matrix.c  pointer.c  random_matrix.c  slange.h  zlange.c  zlange.h
exercise/monte_carlo/: .gitignore  CMakeLists.txt  Makefile  bond_table.c  bond_table.h  exact_counting.c  histogram.c  random.c  square_lattice.c  transfer_matrix.c
exercise/optimization/: .gitignore  CMakeLists.txt  Makefile  cg_2d.c  func_1d.h  func_2d.h  golden_section.c  gradient_descent_2d.c  mc_steepest_descent_1d.c  mc_steepest_descent_2d.c  measurement3.gp  nelder_mead_1d.c  nelder_mead_2d.c  simulated_annealing.c  simulated_annealing_1d.c  simulated_annealing_2d.c  steepest_descent_2d.c
exercise/parallel/: pi.C
exercise/svd/: .gitignore  CMakeLists.txt  Makefile  README.md  dgesvd.h  full_svd.c  matrix_util.h  svd.c
exercise/svd_generate/: .gitignore  CMakeLists.txt  Makefile  generate_sample.cpp  sample-2.in  sample-3.in
handbook/: Makefile  clang.tex  eclbkbox.sty  hello.eps  introduction.tex  latex.tex  main.tex  pointer.eps  unix.tex  vcs.tex
lapack/: Makefile  lu_decomp.c
lecture/: .latexmkrc  00_about.tex  00_about1.tex  01_about2.tex  01_ssh.tex  03_matlab.tex  09_exercise.tex  0_about.tex  11_newton-02.tex  11_newton-04.tex  11_newton-06.tex  11_newton.tex  12_algebraic.tex  13_lapack.tex  14_bisection.tex  1_basics.tex  20_ode.tex  22_numerov.tex  2_ode.tex  2_pde.tex  31_direct.tex  32_iterative.tex  39_exercise.tex  3_linear_system.tex  40_intro.tex  41_dense.tex  42_sparse.tex  43_svd.tex  44_double-well.tex  (+68 more)
(+378 files in other folders)
