file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
foreach(FNAME IN LISTS SRC)
    get_filename_component(TAG ${FNAME} NAME_WE)
    add_executable(${TAG} ${TAG}.c)
    target_include_directories(${TAG} PRIVATE ${INCLUDE})
    target_compile_options(${TAG} PRIVATE ${FLAGS})
    target_compile_features(${TAG} PRIVATE c_std_11)
endforeach(FNAME)

file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(FNAME IN LISTS SRC)
    get_filename_component(TAG ${FNAME} NAME_WE)
    add_executable(${TAG} ${TAG}.cpp)
    target_include_directories(${TAG} PRIVATE ${INCLUDE})
    target_compile_options(${TAG} PRIVATE ${FLAGS})
    target_compile_features(${TAG} PRIVATE cxx_std_17)
endforeach(FNAME)

file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)
foreach(FNAME IN LISTS SRC)
    get_filename_component(TAG ${FNAME} NAME_WE)
    add_executable(${TAG} ${TAG}.f90)
    target_include_directories(${TAG} PRIVATE ${INCLUDE})
    target_compile_options(${TAG} PRIVATE ${FFLAGS})
endforeach(FNAME)

target_link_libraries(bisection PRIVATE m)