find_package(Boost)

if(Boost_FOUND)
    file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
    foreach(FNAME IN LISTS SRC)
        get_filename_component(TAG ${FNAME} NAME_WE)
        add_executable(${TAG} ${TAG}.cpp)
        target_include_directories(${TAG} PRIVATE ${INCLUDE} ${Boost_INCLUDE_DIRS})
        target_compile_options(${TAG} PRIVATE ${FLAGS})
        target_compile_features(${TAG} PRIVATE cxx_std_17)
        target_link_libraries(${TAG} PRIVATE ${Boost_LIBRARIES} ${LINALG_LIBRARIES})
    endforeach(FNAME)
else()
    message(WARNING "NO Boost FOUND")
endif()